packages/tree-sitter/typedown-md-inline/test/corpus/links/edge_cases.txt
================
Link with balanced parens in URL
================
[text](https://example.com/wiki/Foo_(bar))
---

(inline
  (inline_link
    text: (link_text)
    destination: (link_destination
      (link_destination))))

================
Image with path
================
![photo](images/photo.png)
---

(inline
  (image
    alt: (image_alt)
    source: (link_destination)))
