packages/tree-sitter/typedown-md-inline/test/corpus/references/basic.txt
================
Footnote reference
================
[^myref]
---

(inline
  (footnote_reference
    label: (footnote_label)))

================
Citation
================
[@knuth84]
---

(inline
  (citation
    key: (citation_key)))
