packages/tree-sitter/typedown-md-inline/test/corpus/references/citations.txt
================
Citation in text
================
Knuth described this[@knuth1984]
---

(inline
  (citation
    key: (citation_key)))

================
Multiple citations
================
See[@foo] and[@bar]
---

(inline
  (citation
    key: (citation_key))
  (citation
    key: (citation_key)))

================
Citation with underscore
================
[@some_long_key]
---

(inline
  (citation
    key: (citation_key)))

================
Citation with digits
================
[@ref2024]
---

(inline
  (citation
    key: (citation_key)))
